.provarCaches/00D5f000005vwGkEAI/objects/rstkf__statementrun__c.object
<CustomObject>
    <description>statementrun__c</description>
    <fields>
        <fullName>rstkf__allparmsspecified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>allparmsspecified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__batchno__c</fullName>
        <label>Batch Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__budgetdataisready__c</fullName>
        <label>Budget data is ready</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__columnparmsspecified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Specified Column Parms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Company Master</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>ZZ Statement Run</relationshipLabel>
        <relationshipName>statementruns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gldataisready__c</fullName>
        <label>GL data is ready</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial statement - Variant Header</label>
        <referenceTo>rstkf__glfstmplt2__c</referenceTo>
        <relationshipLabel>ZZ Statement Run</relationshipLabel>
        <relationshipName>statementruns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glyear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Fiscal Year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipLabel>ZZ Statement Run</relationshipLabel>
        <relationshipName>statementruns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__lineparmsspecified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Specified Line Parms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__period__c</fullName>
        <label>Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__reportparmsspecified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Specified Report Parms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__rundesc__c</fullName>
        <label>Run Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__seqno__c</fullName>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__specifycolumnparms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>specifycolumnparms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__specifylineparms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>specifylineparms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__specifyreportparms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>specifyreportparms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__stmtentriesareready__c</fullName>
        <label>Statement entries are ready</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>ZZ Statement Run</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZZ Statement Run</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>